Add some basic styles to start GUI develop

--- a/style.css
+++ b/style.css
@@ -7,3 +7,24 @@ body {
     padding: 0;
     background-color: #202124;
 }
+
+#container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    width: 100vw;
+    height: 100vh;
+}
+
+#calculator-body {
+    display: flex;
+    max-height: 700px;
+    max-width: 550px;
+    height: 700px;
+    width: 550px;
+    background-color: white;
+    min-width: 0;
+    min-height: 0;
+    flex: auto;
+}
