--- a/styles/style.css
+++ b/styles/style.css
@@ -36,18 +36,27 @@ body {
 #calculator {
     width: 450px;
     height: 700px;
-    background-color: aliceblue;
     margin: 30px;
     display: flex;
     flex-direction: column;
     border-radius: 30px;
+    justify-content: center;
+    align-items: center;
+    background-color: #202124;
 }
 
 #display {
     height: 150px;
-    width: 450px;
-    border: 2px yellow solid;
+    width: 420px;
     border-radius: 30px;
+    text-align: end;
+    align-content: end;
+    padding: 20px;
+    font-size: 2rem;
+    word-wrap: break-word;
+    margin: 10px;
+    flex: auto;
+    background-color: #F1F3F4;
 }
 
 #buttons {
@@ -58,18 +67,32 @@ body {
     justify-content: center;
 }
 
+
+
+
 button {
     height: 100px;
     width: 100px;
-    border: 1px red solid;
     text-align: center;
     align-content: center;
-    border-radius: 100px;
+    font-size: 3rem;
+  background-image: linear-gradient(#0dccea, #0d70ea);
+  border: 0;
+  border-radius:100px;
+  box-shadow: rgba(121, 120, 120, 0.39) 0 5px 15px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: Montserrat,sans-serif;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
 button:hover {
-    background-color: blue;
+    background-image: linear-gradient(#44e2fa, #2c87f5)
 }
-button:focus {
-    background-color: red;
+
+button:active{
+    background-image: linear-gradient(#088194, #0a4997);
 }
